# schedule-api

./: Makefile  README.md  pyproject.toml
src/: app.py
src/api/: exceptions.py  utils.py
src/api/routers/: university.py
src/api/schemas/: university.py
